--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "chart.js": "^4.4.0",
+        "react-simple-maps": "^1.0.0",
         "vue-chartjs": "^5.2.0",
         "vuex": "^4.0.2"
     }
